search fix on mobile

--- a/style.css
+++ b/style.css
@@ -340,6 +340,7 @@
     display:block;
   }
   #search-results-mobile {
+    position: absolute;
     width: 100%;
     max-height: 200px;
     overflow-y: auto;
@@ -347,9 +348,20 @@
     color: #00ff00;
     border: 1px solid #00ff00;
     padding: 8px;
-    margin-top: 4px;
+    margin-top: 262.4px;
   }
-
+  #search-results {
+    position: static;
+    width: 100%;
+    max-height: 300px;
+    overflow-y: auto;
+    background-color: black;
+    color: #00ff00;
+    border: 1px solid #00ff00;
+    padding: 5px;
+    margin-top: 4px;
+    display: none;
+  }
   #music-player {
     display: flex;
     flex-direction: column;
